@@ -1,3 +1,4 @@
+9/27/10 create nodes for positive and negative charges, use in other places that require + and -
 9/27/10 create scale button programmatically, image files looked lousy because these buttons are so small
 # 0.00.12 (44365) Sep 24, 2010
 9/24/10 replace PText("-") with PPath(Rectangle2D) on current indicator, so that "-" can be precisely centered
